# cryptography-base

.github/workflows/: ci.yml
lab1/: build.gradle.kts  settings.gradle.kts
lab1/native/: CMakeLists.txt  main.c
lab1/native/bridge/: DESRoundFunction.c  FeistelNetwork.c  NativeFunctions.c  project_algorythm_des_DESRoundFunction.h  project_application_core_FeistelNetwork.h  project_application_core_NativeFunctions.h
lab1/native/include/: bit_operation.h  bit_permutation.h  key_schedule.h  round_function.h
lab1/native/src/: bit_operation.c  bit_permutation.c  key_schedule.c  round_function.c
lab1/src/main/java/project/algorythm/des/: DESCipher.java  DESCypher.java  DESKeySchedule.java  DESRoundFunction.java
lab1/src/main/java/project/application/context/: SymmetricCipherContext.java  SymmetricCypherContext.java
lab1/src/main/java/project/application/core/: FeistelNetwork.java  NativeFunctions.java
lab1/src/main/java/project/domain/enums/: CipherMode.java  CypherMode.java  PaddingMode.java
lab1/src/main/java/project/interfaces/: KeySchedule.java  RoundFunction.java  SymmetricCipher.java  SymmetricCypher.java
lab1/src/test/java/des/: DESCipherTest.java
lab1/src/test/java/project/domain/enums/: PaddingModeTest.java
lab1/test/native/: bit_operation_test.c
